# OldKernelThing

./: Cargo.toml
.cargo/: config
builder/: Cargo.toml
builder/src/: main.rs
driver/console-vga/: Cargo.toml
driver/console-vga/src/: lib.rs
driver/vga/: Cargo.toml
driver/vga-efi/: Cargo.toml
driver/vga-efi/src/: lib.rs
driver/vga/src/: lib.rs
kernel/: Cargo.toml
kernel/memory/: Cargo.toml
kernel/memory/src/: allocator.rs  frame_allocator_bootinfo.rs  lib.rs  paging.rs  stack.rs
kernel/src/: acpi.rs  console.rs  gdt.rs  graphics.rs  idt.rs  lib.rs  main.rs  serial.rs
