[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[package.metadata.bootloader]
map-physical-memory = true

[dependencies]
bootloader = "0.10.12"
acpi = "4.1.0"
x86_64 = "0.14.8"
spin = "0.9.2"
uart_16550 = "0.2.16"
linked_list_allocator = "0.9.1"
colors = { package = "owo-colors", version="3.2.0"}


kernel-memory = { path = "memory" }
driver-vga = {path = "../driver/vga"} 
vga-efi = {path = "../driver/vga-efi"}
console-vga = { path = "../driver/console-vga"}

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]


[dependencies.palette]
git = "https://github.com/Ogeon/palette.git"
default-features = false
features = ["libm"] # Uses libm instead of std for floating point math
