[package]
name = "console-vga"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.2"
font8x8 = { version="0.3", default-features=false, features=["unicode"] }
uefi = "0.14.0"

driver-vga = { path = "../vga" }