[package]
name = "console-vga"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.2"
font8x8 = { version="0.3", default-features=false, features=["unicode"] }
uefi = "0.14.0"
cansi = { version = "2.1.0", default-features = false, features = ["alloc"] }

driver-vga = { path = "../vga" }

[dependencies.palette]
git = "https://github.com/Ogeon/palette.git"
default-features = false
features = ["libm", "named"] # Uses libm instead of std for floating point math
[dependencies.fontdue]
git = "https://github.com/mooman219/fontdue.git"
default-features = false